--- a/trained_networks_analysis.ipynb
+++ b/trained_networks_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b3e54388",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "f0d5dfa8",
    "metadata": {
     "code_folding": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "58328678",
    "metadata": {
     "scrolled": false
@@ -78,8 +78,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "_4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2_simulationdata_actsel_greedy_numepi_1_K_10_N_4_T_10000_g_8.0\n",
-      "_STOMPnet_M_2_L_4_nfeatures_2_cap_240_trainseed_0_epochs_5_batchsz_16_lr_0.001\n"
+      "_4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2_simulationdata_actsel_greedy_numepi_1_K_3_N_4_T_1000_g_8.0\n",
+      "_STOMPnet_M_2_L_8_nfeatures_4_cap_240_trainseed_3_epochs_20_batchsz_16_lr_5e-5\n"
      ]
     }
    ],
@@ -93,9 +93,9 @@
     "                '_simulationdata' +\\\n",
     "                '_actsel_greedy' +\\\n",
     "                '_numepi_1' +\\\n",
-    "                '_K_10' +\\\n",
+    "                '_K_3' +\\\n",
     "                '_N_4' +\\\n",
-    "                '_T_10000' +\\\n",
+    "                '_T_1000' +\\\n",
     "                f'_g_8.0'\n",
     "print(data_settings_str)\n",
     "seed_idx = 0\n",
@@ -103,109 +103,33 @@
     "#                 '_multitaskbaseline' +\\\n",
     "#  '_STOMPnet_M_2_L_4_nfeatures_2' +\\\n",
     "training_settings_str =\\\n",
-    " '_STOMPnet_M_2_L_4_nfeatures_2' +\\\n",
+    " '_STOMPnet_M_2_L_8_nfeatures_4' +\\\n",
     "                '_cap_240' +\\\n",
-    "                '_trainseed_0' +\\\n",
-    "                '_epochs_5' +\\\n",
+    "                '_trainseed_3' +\\\n",
+    "                '_epochs_20' +\\\n",
     "                '_batchsz_16' +\\\n",
-    "                '_lr_0.001'\n",
+    "                '_lr_5e-5'\n",
     "print(training_settings_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "d3064ebf",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data_settings\n",
-      "{\n",
-      "    \"actsel\": \"greedy\",\n",
-      "    \"dataset_label\": \"4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2\",\n",
-      "    \"episode_length\": 10000,\n",
-      "    \"num_episodes\": 1,\n",
-      "    \"num_seeds\": 2,\n",
-      "    \"sys_parameters\": {\n",
-      "        \"K\": 10,\n",
-      "        \"N\": 4,\n",
-      "        \"action_space_dim\": 2,\n",
-      "        \"fluctuation_strength_factor\": 8.0,\n",
-      "        \"jointagent_groundmodel_paras\": {\n",
-      "            \"M\": 2,\n",
-      "            \"corr\": 1.0,\n",
-      "            \"ensemble\": \"sum\",\n",
-      "            \"modelname\": \"bitpop\"\n",
-      "        }\n",
-      "    }\n",
-      "}\n",
-      "\n",
-      "training_data\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.0.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.0.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.1.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.1.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.2.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.2.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.3.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.0.3.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.0.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.0.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.1.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.1.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.2.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.2.bias False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.3.weight False\n",
-      "sample_from_abstract_joint_policy.abstract_agent_policy_networks.module_array.1.3.bias False\n",
-      "ground_joint_policy.ground_agent_embedding.weight False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.0.weight False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.0.bias False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.1.weight False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.1.bias False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.2.weight False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.2.bias False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.3.weight False\n",
-      "ground_joint_policy.shared_ground_agent_policy_network.module_array.0.3.bias False\n",
-      "assigner.abs_agent_assignment_embedding.weight False\n",
-      "{\n",
-      "    \"data_path\": \"output/_4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2_simulationdata_actsel_greedy_numepi_1_K_10_N_4_T_10000_g_8.0_dataseed_0\",\n",
-      "    \"model_paras\": {\n",
-      "        \"L\": 4,\n",
-      "        \"M\": 2,\n",
-      "        \"hidden_capacity\": 240,\n",
-      "        \"model_name\": \"STOMPnet\",\n",
-      "        \"nfeatures\": 2\n",
-      "    },\n",
-      "    \"training_data\": {\n",
-      "        \"accuracy\": [\n",
-      "            0.9984,\n",
-      "            1.0,\n",
-      "            1.0,\n",
-      "            1.0,\n",
-      "            1.0\n",
-      "        ],\n",
-      "        \"loss\": [\n",
-      "            0.6254156031608582,\n",
-      "            0.625,\n",
-      "            0.625,\n",
-      "            0.625,\n",
-      "            0.625\n",
-      "        ]\n",
-      "    },\n",
-      "    \"training_paras\": {\n",
-      "        \"batch_size\": 16,\n",
-      "        \"epochs\": 5,\n",
-      "        \"learning_rate\": 0.001,\n",
-      "        \"train_seed\": 0\n",
-      "    }\n",
-      "}\n",
-      "\n",
-      "model has 195594 parameters grouped as:\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'output/lossgoesdownexample_4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2_simulationdata_actsel_greedy_numepi_1_K_3_N_4_T_1000_g_8.0_dataseed_0.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m data_settings \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(out_dir \u001b[38;5;241m+\u001b[39m data_settings_str \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m, allow_pickle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m      4\u001b[0m data_root \u001b[38;5;241m=\u001b[39m out_dir \u001b[38;5;241m+\u001b[39m  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlossgoesdownexample\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39mdata_settings_str \u001b[38;5;241m+\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_dataseed_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mseed_idx\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m training_data \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_root\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m.npy\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mallow_pickle\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m      6\u001b[0m training_dict \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mload(data_root \u001b[38;5;241m+\u001b[39m training_settings_str \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m, allow_pickle\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\u001b[38;5;241m.\u001b[39mitem()\n\u001b[1;32m      7\u001b[0m trained_model_state_dict \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mload(data_root \u001b[38;5;241m+\u001b[39m training_settings_str\u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_state_dict.pt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/lib/python3.10/site-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'output/lossgoesdownexample_4agentdebug_modelname_bitpop_corr_1.0_ensemble_sum_M_2_simulationdata_actsel_greedy_numepi_1_K_3_N_4_T_1000_g_8.0_dataseed_0.npy'"
      ]
     }
    ],
@@ -213,7 +137,7 @@
     "out_dir = \"output/\"\n",
     "data_settings = np.load(out_dir + data_settings_str + \".npy\", allow_pickle=True).item()\n",
     "\n",
-    "data_root = out_dir + data_settings_str + f\"_dataseed_{seed_idx}\"\n",
+    "data_root = out_dir +  'lossgoesdownexample'+data_settings_str + f\"_dataseed_{seed_idx}\"\n",
     "training_data = np.load(data_root+\".npy\", allow_pickle=True).item()\n",
     "training_dict = np.load(data_root + training_settings_str + \".npy\", allow_pickle=True).item()\n",
     "trained_model_state_dict = torch.load(data_root + training_settings_str+ '_state_dict.pt')\n",
@@ -274,7 +198,7 @@
     "            out_dir = \"output/\"\n",
     "            seed_idx=0\n",
     "        #     data_settings = np.load(out_dir + data_settings_str + \".npy\", allow_pickle=True).item()\n",
-    "            data_root = out_dir + '2xsamplesize' + data_settings_str + f\"_dataseed_{seed_idx}\"\n",
+    "            data_root = out_dir + 'lossgoesdow' + data_settings_str + f\"_dataseed_{seed_idx}\"\n",
     "        #     training_data = np.load(data_root+\".npy\", allow_pickle=True).item()\n",
     "            training_dict = np.load(data_root + training_settings_str + \".npy\", allow_pickle=True).item()\n",
     "        #     trained_model_state_dict = torch.load(data_root + training_settings_str+ '_state_dict.pt')\n",
