consolidated the 3 sharing types of MLP models into a single class

--- a/notebooks/model_parameter_scaling.ipynb
+++ b/notebooks/model_parameter_scaling.ipynb
@@ -46,9 +46,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as pl\n",
     "import torch\n",
-    "from STOMPnet import STOMPnet,Decoder\n",
-    "from STOMPnet2 import STOMPnet2\n",
-    "from utils import MultiChannelNet, get_width, count_parameters\n",
+    "# from STOMPnet import STOMPnet,Decoder\n",
+    "# from STOMPnet2 import STOMPnet2\n",
+    "# from utils import MultiChannelNet, get_width, count_parameters\n",
+    "from models import get_width\n",
     "import h5py\n",
     "import yaml\n",
     "import json\n",
