added grad norm tracking; wandb runname; interaction model updates

--- a/notebooks/analyze_training-Copy1.ipynb
+++ b/notebooks/analyze_training-Copy1.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# experiment parameters\n",
     "N = 10 # num agents. [10,100,1000]\n",
-    "corr = 0.8 # pairwise correlation in data generated from logit model. [0, 0.5, .99]\n",
+    "corr = 0 #.8 # pairwise correlation in data generated from logit model. [0, 0.5, .99]\n",
     "P = int(5e5) # training model size. big enough such that hidden width not too small? \n",
     "seq_len = 16 # context length. adjust based on distinguishability of contexts\n",
     "training_sample_budget = int(1e4)\n",
