included model specs as input arguments

--- a/notebooks/analyze_wandb_runs.ipynb
+++ b/notebooks/analyze_wandb_runs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9572f3a3",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "51202276",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/mnt/c/Users/maxpu/Dropbox/scripts/Projects/abstraction'"
+       "'/mnt/c/Users/maxpu/Dropbox/scripts/Projects/ToMM/ToMM'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "id": "52c53e17",
    "metadata": {},
    "outputs": [],
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 7,
    "id": "8ac468f3",
    "metadata": {},
    "outputs": [],
@@ -78,8 +78,8 @@
     "    summary_list, logged_vars_list, config_list, name_list, state_list = [], [], [], [], []\n",
     "    for run in runs:\n",
     "#         if run.group=='scaling-nointer' or run.group=='scaling':\n",
-    "        if run.group=='postICML':\n",
-    "            \n",
+    "        # if run.group=='postICML':\n",
+    "        if run.group=='postICMLgsystest':\n",
     "            # .summary contains output keys/values for\n",
     "            # metrics such as accuracy.\n",
     "            #  We call ._json_dict to omit large files\n",
@@ -112,11 +112,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "id": "d4afb483-a84a-488c-a995-d6f5aac5e27a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N10_P508090_l1_c0.8_lr0.0005_imattn_dtMLPtestmixmodel_wattn_wope_inter1\n",
+      "N10_P508090_l1_c0.8_lr0.0005_imattn_dtMLPtestmixmodel_wattn_wope\n",
+      "N10_P508090_l1_c0.8_lr0.0005_imattn_dtMLPtestmixmodel_wattn\n",
+      "N10_P499894_l1_c0.8_lr0.0005_imNone_dtMLPtestmixmodel\n",
+      "N10_P499894_l1_c0.8_lr0.0005_imNone_dtMLPtestgaussstate1_w_pe_woattn_seq1c08\n",
+      "N10_P508090_l1_c0.8_lr0.0005_imattn_dtMLPtestgaussstate1_w_pe_wattn_seq1c08\n",
+      "N10_P508090_l1_c0.8_lr0.0005_imattn_dtMLPtestgaussstate1_wo_pe_wattn_seq1c08\n",
+      "N10_P508090_l1_c0_lr0.0005_imattn_dtMLPtestgaussstate10_wo_pe_wattn_seq1\n",
+      "N10_P508090_l1_c0_lr0.0005_imattn_dtMLPtestgaussstate_wo_pe_wattn_seq1\n",
+      "N10_P508090_l16_c0_lr0.0005_imattn_dtMLPtestgaussstate_wo_pe_wattn\n",
+      "N10_P508090_l16_c0_lr0.0005_imattn_dtMLPtestgaussstate_wo_pe_wattn\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtestgaussstate_wo_pe\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtestuniformstate_wo_pe\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtestuniformnostate_wo_pe\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtestnostate_wo_pe\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_wo_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_w_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_w_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_w_pe\n",
+      "N10_P599078_l16_c0_lr0.0005_imipattn_dtMLPtest1state_w_pe\n",
+      "N10_P499894_l16_c0_lr0.0005_imNone_dtMLPtest1state_w_pe\n",
+      "N10_P505199_l16_c0_lr0.0005_imNone_dtMLPtest1state\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in runs_df.name:\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "id": "a0c6d6a6",
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
