--- a/notebooks/run_jobs.ipynb
+++ b/notebooks/run_jobs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "2fef5391-ad97-4461-b677-38c41c8b53a3",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "a68ee09b-58c6-4fa8-9bc2-e51032c00a0c",
    "metadata": {},
    "outputs": [
@@ -20,18 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n"
+      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n"
      ]
     }
    ],
@@ -44,12 +33,12 @@
     "    \"seq_len\": [16],  # Assuming only one value as per the excerpt\n",
     "    \"training_sample_budget\": [int(1e4)],  # Assuming only one value as per the excerpt\n",
     "    \"use_pos_enc\": [0, 1], \n",
-    "    \"inter\": ['None','attn'],\n",
+    "    \"inter\": ['None'], #,'ipattn'],\n",
     "    \"S\": [8],\n",
     "    \"A\": [2],\n",
-    "    \"wstate\": [0., 1. ,10.],\n",
+    "    \"wagent\": [0., 1. ,10.],\n",
     "    \"batch_size\": [8],  # Assuming only one value as per the excerpt\n",
-    "    \"num_epochs\": [100],  # Assuming only one value as per the excerpt\n",
+    "    \"num_epochs\": [50],  # Assuming only one value as per the excerpt\n",
     "    \"learning_rate\": [5e-4],  # Assuming only one value as per the excerpt\n",
     "    \"data_seed\": [0],  # Assuming only one value as per the excerpt\n",
     "    \"seed\": [0],  # Assuming only one value as per the excerpt\n",
@@ -62,15 +51,36 @@
     "# with open('scripts/commands.txt', 'w') as file:\n",
     "cmds = []\n",
     "for combination in all_combinations:\n",
-    "    cmd_str=\"python mlp_match.py \" + ' '.join([f\"--{key} {value}\" for key,value in zip(paras.keys(),combination)])\n",
-    "    print(cmd_str)\n",
-    "    cmds.append(cmd_str)"
+    "    cmd_str=\"python mlp_match.py \" + ' '.join([f\"--{key} {value}\" for key,value in zip(paras.keys(),combination)]) \n",
+    "    cmds.append(cmd_str)\n",
+    "print(';'.join(cmds))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6fb14d86-3e23-4c18-a57e-8beb07262226",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "# python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "# python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "# python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "# python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter attn --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;\n",
+    "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter attn --S 8 --A 2 --wstate 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3637660b-ff06-4077-a1aa-c190793242fe",
    "metadata": {},
    "outputs": [],
    "source": []
