--- a/notebooks/run_jobs.ipynb
+++ b/notebooks/run_jobs.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "a68ee09b-58c6-4fa8-9bc2-e51032c00a0c",
    "metadata": {},
    "outputs": [
@@ -20,20 +20,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1;python mlp_match.py --N 10 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n"
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n"
      ]
     }
    ],
    "source": [
     "# Define different values for each argument\n",
     "paras = {\n",
-    "    \"N\": [10],\n",
-    "    \"corr\": [0.8],\n",
+    "    \"N\": [100],\n",
+    "    \"corr\": [0.],\n",
     "    \"P\": [int(5e5)],  # Assuming only one value as per the excerpt\n",
     "    \"seq_len\": [16],  # Assuming only one value as per the excerpt\n",
     "    \"training_sample_budget\": [int(1e4)],  # Assuming only one value as per the excerpt\n",
     "    \"use_pos_enc\": [0, 1], \n",
-    "    \"inter\": ['None'], #,'ipattn'],\n",
+    "    \"inter\": ['None','ipattn'],\n",
     "    \"S\": [8],\n",
     "    \"A\": [2],\n",
     "    \"wagent\": [0., 1. ,10.],\n",
@@ -52,8 +63,53 @@
     "cmds = []\n",
     "for combination in all_combinations:\n",
     "    cmd_str=\"python mlp_match.py \" + ' '.join([f\"--{key} {value}\" for key,value in zip(paras.keys(),combination)]) \n",
-    "    cmds.append(cmd_str)\n",
-    "print(';'.join(cmds))"
+    "    print(cmd_str)\n",
+    "    # cmds.append(cmd_str)\n",
+    "# print(';'.join(cmds))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6cb50ee-5b3a-4d4e-a015-2dc0dba6e613",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#N=100\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+    "python mlp_match.py --N 100 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a91b8a3c-0772-431c-9ddb-86617a29f475",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#N=10000\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
+    "python mlp_match.py --N 10000 --corr 0.8 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1"
    ]
   },
   {
