made logit model sampling more efficient by replacing multivariate normal with gaussian mixture

--- a/notebooks/analyze_correlations.ipynb
+++ b/notebooks/analyze_correlations.ipynb
@@ -701,7 +701,12 @@
    "id": "6648c06a-970f-4998-bb2f-3ecc4bc9953b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "MI = lambda rho: 2*( np.log2(2) + (1+rho)/4*np.log2((1+rho)/4) + (1-rho)/4*np.log2((1-rho)/4))\n",
+    "fig,ax=pl.subplots()\n",
+    "rhovec = np.linspace(0,1,100)\n",
+    "ax.plot(rhovec,MI(rhovec))"
+   ]
   }
  ],
  "metadata": {
