--- a/notebooks/run_jobs.ipynb
+++ b/notebooks/run_jobs.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "id": "a68ee09b-58c6-4fa8-9bc2-e51032c00a0c",
    "metadata": {},
    "outputs": [
@@ -20,18 +20,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 0 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n",
-      "python mlp_match.py --N 10000 --corr 0.0 --P 500000 --seq_len 16 --training_sample_budget 100 --use_pos_enc 1 --inter ipattn --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 50 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 100 --use_wandb 1\n"
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 1 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 16 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 0 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter None --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 0.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 1.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "python mlp_match.py --N 100 --corr 0.8 --state_corr_len 160 --P 500000 --seq_len 16 --training_sample_budget 10000 --use_pos_enc 1 --inter ISAB --S 8 --A 2 --wagent 10.0 --batch_size 8 --num_epochs 100 --learning_rate 0.0005 --data_seed 0 --seed 0 --evaluation_sample_size 10000 --use_wandb 1\n",
+      "36\n"
      ]
     }
    ],
@@ -39,23 +64,43 @@
     "# Define different values for each argument\n",
     "paras = {\n",
     "    \"N\": [100],\n",
-    "    \"corr\": [0.],\n",
+    "    \"corr\": [0.8],\n",
+    "    \"state_corr_len\": [1,16,160], \n",
     "    \"P\": [int(5e5)],  # Assuming only one value as per the excerpt\n",
     "    \"seq_len\": [16],  # Assuming only one value as per the excerpt\n",
     "    \"training_sample_budget\": [int(1e4)],  # Assuming only one value as per the excerpt\n",
     "    \"use_pos_enc\": [0, 1], \n",
-    "    \"inter\": ['None','ipattn'],\n",
+    "    \"inter\": ['None','ISAB'],\n",
     "    \"S\": [8],\n",
     "    \"A\": [2],\n",
     "    \"wagent\": [0., 1. ,10.],\n",
     "    \"batch_size\": [8],  # Assuming only one value as per the excerpt\n",
-    "    \"num_epochs\": [50],  # Assuming only one value as per the excerpt\n",
+    "    \"num_epochs\": [100],  # Assuming only one value as per the excerpt\n",
     "    \"learning_rate\": [5e-4],  # Assuming only one value as per the excerpt\n",
     "    \"data_seed\": [0],  # Assuming only one value as per the excerpt\n",
     "    \"seed\": [0],  # Assuming only one value as per the excerpt\n",
     "    \"evaluation_sample_size\": [int(1e4)] , # Assuming only one value as per the excerpt\n",
     "    \"use_wandb\": [1]\n",
     "}\n",
+    "# paras = {\n",
+    "#     \"N\": [10000],\n",
+    "#     \"corr\": [0.,0.8],\n",
+    "#     \"P\": [int(5e5)],  # Assuming only one value as per the excerpt\n",
+    "#     \"seq_len\": [16],  # Assuming only one value as per the excerpt\n",
+    "#     \"training_sample_budget\": [int(1e2)],  # Assuming only one value as per the excerpt\n",
+    "#     \"use_pos_enc\": [0, 1], \n",
+    "#     \"inter\": ['None','ISAB'],\n",
+    "#     \"S\": [8],\n",
+    "#     \"A\": [2],\n",
+    "#     \"wagent\": [0., 1. ,10.],\n",
+    "#     \"batch_size\": [8],  # Assuming only one value as per the excerpt\n",
+    "#     \"num_epochs\": [100],  # Assuming only one value as per the excerpt\n",
+    "#     \"learning_rate\": [5e-4],  # Assuming only one value as per the excerpt\n",
+    "#     \"data_seed\": [0],  # Assuming only one value as per the excerpt\n",
+    "#     \"seed\": [0],  # Assuming only one value as per the excerpt\n",
+    "#     \"evaluation_sample_size\": [int(1e2)] , # Assuming only one value as per the excerpt\n",
+    "#     \"use_wandb\": [1]\n",
+    "# }\n",
     "# Generate all combinations of argument values/\n",
     "all_combinations = itertools.product(*paras.values())\n",
     "# Open the file to write the commands\n",
@@ -64,7 +109,8 @@
     "for combination in all_combinations:\n",
     "    cmd_str=\"python mlp_match.py \" + ' '.join([f\"--{key} {value}\" for key,value in zip(paras.keys(),combination)]) \n",
     "    print(cmd_str)\n",
-    "    # cmds.append(cmd_str)\n",
+    "    cmds.append(cmd_str)\n",
+    "print(len(cmds))\n",
     "# print(';'.join(cmds))"
    ]
   },
